<resources>
    <string name="app_name">KWC IRAN</string>
    <string name="project_EN">Projects</string>
    <string name="project_FA">پروژه ها</string>
    <string name="News_EN">News and Events</string>
    <string name="News_FA">اخبار و رویدادها</string>
    <string name="download_EN">Download File</string>
    <string name="download_Fa">دریافت فایل</string>
    <string name="Newletter_EN">Newsletter</string>
    <string name="Newletter_Fa">ماهنامه</string>
    <string name="About_us_EN">About Us</string>
    <string name="About_us_FA">درباره ما</string>
    <string name="Award_EN">Awards</string>
    <string name="Award_FA">جوایز</string>
    <string name="Certificate_EN">Certificates</string>
    <string name="Certificate_FA">گواهینامه ها</string>
    <string name="Philosophy_EN">Philosophy</string>
    <string name="Philosophy_FA">فلسفه</string>
    <string name="ContactUs_EN">Contact Us</string>
    <string name="ContactUs_FA">ارتباط با ما</string>
    <string name="Language_FA">زبان</string>
    <string name="Language_EN">Language</string>
    <string name="notselect">&#x25EF;</string>
    <string name="select">&#x25CF;</string>
    <string name="username_FA">نام کاربری</string>
    <string name="username_EN">Username</string>
    <string name="password_FA">کلمه عبور</string>
    <string name="password_EN">Password</string>
    <string name="login_EN">Login</string>
    <string name="login_FA">ورود</string>
    <string name="SaleNetwork_EN">Sales Network</string>
    <string name="SaleNetwork_FA">مراکز فروش</string>
    <string name="afterSale_EN">After Sales Service</string>
    <string name="afterSale_FA">خدمات پس از فروش</string>
    <string name="Ostan_EN">State</string>
    <string name="Ostan_FA">استان</string>
    <string name="Address_EN">Address:</string>
    <string name="Address_FA">آدرس:</string>
    <string name="Tel_EN">Tel:</string>
    <string name="Tel_FA">تلفن:</string>
    <string name="Mobile_EN">Mobile:</string>
    <string name="Mobile_FA">موبایل:</string>
    <string name="MultiColor_EN">Multi Color</string>
    <string name="MultiColor_FA">شیرهای رنگی</string>
    <string name="Concealed_EN">Concealed</string>
    <string name="Concealed_FA">شیرهای توکار</string>
    <string name="Kitchen_EN">Kitchen</string>
    <string name="Kitchen_FA">آشپزخانه</string>
    <string name="Bathroom_EN">Bathroom</string>
    <string name="Bathroom_FA">حمام و دستشویی</string>
    <string name="Intelligent_EN">Intelligent</string>
    <string name="Intelligent_FA">شیرهای هوشمند</string>
    <string name="accessories_kwc_EN">Accessories KWC</string>
    <string name="accessories_kwc_FA">محصولات جانبی | KWC</string>
    <string name="accessories_franke_EN">Accessories Franke</string>
    <string name="accessories_franke_FA">محصولات جانبی | Franke</string>
    <string name="accessories_oli_EN">Accessories Oli</string>
    <string name="accessories_oli_FA">محصولات جانبی | Oli</string>
    <string name="accessories_Geesa_EN">Accessories Geesa</string>
    <string name="accessories_Geesa_FA">محصولات جانبی | Geesa</string>
    <string name="accessories_Ideal_Standard_EN">Accessories Ideal Standard</string>
    <string name="accessories_Ideal_Standard_FA">محصولات جانبی | Ideal Standard</string>
    <string name="codemahsol_FA">کد محصول:</string>
    <string name="codemahsol_EN">Product code:</string>
    <string name="price_FA">قیمت محصول:</string>
    <string name="price_EN">Product price:</string>
    <string name="tozihat_FA">توضیحات:</string>
    <string name="tozihat_EN">Description</string>
    <string name="ranbandi_FA">رنگبندی	</string>
    <string name="ranbandi_EN">Finishes</string>
    <string name="accessori_FA">محصولات جانبی</string>
    <string name="accessori_EN">Accessories</string>
    <string-array name="accessoriEn">

        <item>@string/accessories_kwc_EN</item>
        <item>@string/accessories_franke_EN</item>
        <item>@string/accessories_oli_EN</item>
        <item>@string/accessories_Geesa_EN</item>
        <item>@string/accessories_Ideal_Standard_EN</item>

    </string-array>
    <string-array name="accessoriFA">
        <item>@string/accessories_kwc_FA</item>
        <item>@string/accessories_franke_FA</item>
        <item>@string/accessories_oli_FA</item>
        <item>@string/accessories_Geesa_FA</item>
        <item>@string/accessories_Ideal_Standard_FA</item>

    </string-array>
    <string-array name="sideBarItemTitlesEn">

        <item>Company</item>
        <item>Product</item>
        <item>Projects</item>
        <item>Sales Network</item>
        <item>After Sales Service</item>
        <item>News and Events</item>
        <item>Newsletter</item>
        <item>Contact Us</item>
        <item>Log In</item>
    </string-array>
    <string-array name="sideBarItemTitlesFA">
        <item>شرکت</item>
        <item>محصولات</item>
        <item>پروژه ها</item>
        <item>مراکز فروش</item>
        <item>خدمات پس از فروش</item>
        <item>اخبار و رویداد ها</item>
        <item>ماهنامه</item>
        <item>ارتباط با ما</item>
        <item>ورود</item>

    </string-array>
    <string-array name="sideBarItemIcons">
        <item>&#x0062;</item>
        <item>&#x0063;</item>
        <item>&#x0064;</item>
        <item>&#x006A;</item>
        <item>&#x0069;</item>
        <item>&#x0066;</item>
        <item>&#x0067;</item>
        <item>&#x0065;</item>
        <item>&#x0068;</item>

    </string-array>
    <string-array name="sideBarItemTitlesCompanyEn">
        <item>Company</item>
        <item>  About Us</item>
        <item>  Philosophy</item>
        <item>  Awards</item>
        <item>  Certificates</item>
        <item>Product</item>
        <item>Projects</item>
        <item>Sales Network</item>
        <item>After Sales Service</item>

        <item>News and Events</item>
        <item>Newsletter</item>
        <item>Contact Us</item>
        <item>Log In</item>

    </string-array>
    <string-array name="sideBarItemTitlesCompanyFA">
        <item>شرکت</item>
        <item>  درباره ما</item>
        <item>  فلسفه</item>
        <item>  جوایز</item>
        <item>گواهینامه ها  </item>
        <item>محصولات</item>
        <item>پروژه ها</item>
        <item>مراکز فروش</item>
        <item>خدمات پس از فروش</item>
        <item>اخبار و رویداد ها</item>
        <item>ماهنامه</item>
        <item>ارتباط با ما</item>
        <item>ورود</item>

    </string-array>
    <string-array name="sideBarItemIconsCompayny">
        <item>&#x0062;</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>&#x0063;</item>
        <item>&#x0064;</item>
        <item>&#x006A;</item>
        <item>&#x0069;</item>
        <item>&#x0066;</item>
        <item>&#x0067;</item>
        <item>&#x0065;</item>
        <item>&#x0068;</item>
    </string-array>
    <string-array name="sideBarItemTitlesProductCompanyEn">
        <item>Company</item>
        <item>  About Us</item>
        <item>  Philosophy</item>
        <item>  Awards</item>
        <item>  Certificates</item>
        <item>Product</item>
        <item>  Kitchen</item>
        <item>  Bathroom</item>
        <item>  Intelligent</item>
        <item>  Concealed</item>
        <item>  Multi Color</item>
        <item>  Accessories</item>
        <item>Projects</item>
        <item>Sales Network</item>
        <item>After Sales Service</item>

        <item>News and Events</item>
        <item>Newsletter</item>
        <item>Contact Us</item>
        <item>Log In</item>

    </string-array>
    <string-array name="sideBarItemTitlesProductCompanyFA">
        <item>شرکت</item>
        <item>  درباره ما</item>
        <item>  فلسفه</item>
        <item>  جوایز</item>
        <item>گواهینامه ها  </item>
        <item>محصولات</item>
        <item>  آشپزخانه</item>
        <item>حمام و دستشویی  </item>
        <item>شیرهای هوشمند  </item>
        <item>شیرهای توکار  </item>
        <item>شیرهای رنگی  </item>
        <item>محصولات جانبی  </item>
        <item>پروژه ها</item>

        <item>مراکز فروش</item>
        <item>خدمات پس از فروش</item>
        <item>اخبار و رویداد ها</item>
        <item>ماهنامه</item>
        <item>ارتباط با ما</item>
        <item>ورود</item>

    </string-array>
    <string-array name="sideBarItemIconsProductCompany">
        <item>&#x0062;</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>&#x0063;</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>&#x0064;</item>
        <item>&#x006A;</item>
        <item>&#x0069;</item>
        <item>&#x0066;</item>
        <item>&#x0067;</item>
        <item>&#x0065;</item>
        <item>&#x0068;</item>

    </string-array>
    <string-array name="sideBarItemTitlesProductEn">
        <item>Company</item>
        <item>Product</item>
        <item>  Kitchen</item>
        <item>  Bathroom</item>
        <item>  Intelligent</item>
        <item>  Concealed</item>
        <item>  Multi Color</item>
        <item>  Accessories</item>
        <item>Projects</item>
        <item>Sales Network</item>
        <item>After Sales Service</item>
        <item>News and Events</item>
        <item>Newsletter</item>
        <item>Contact Us</item>
        <item>Log In</item>

    </string-array>
    <string-array name="sideBarItemTitlesProductFA">
        <item>شرکت</item>
        <item>محصولات</item>
        <item>  آشپزخانه</item>
        <item>حمام و دستشویی  </item>
        <item>شیرهای هوشمند  </item>
        <item>شیرهای توکار  </item>
        <item>شیرهای رنگی  </item>
        <item>محصولات جانبی  </item>
        <item>پروژه ها</item>
        <item>مراکز فروش</item>
        <item>خدمات پس از فروش</item>
        <item>اخبار و رویداد ها</item>
        <item>ماهنامه</item>
        <item>ارتباط با ما</item>
        <item>ورود</item>
    </string-array>
    <string name="aboutUsTitle1EN">KWC Swiss</string>
    <string name="aboutUsText1EN">KWC represents 140 years of expertise in water management. KWC faucets are a byword for first-class intelligence in the bathroom and kitchen. With sustainable technologies, exquisite quality and innovative design the leading Swiss faucet manufacturer has made a name for itself across the globe.
KWC has belonged to the Franke Group since 2013 and is a brand of Franke Water Systems AG in Aarburg. Its head office and the production site are domiciled in Unterkulm, Switzerland. From here, KWC exports its quality faucets to over 50 countries across five continents
    </string>
    <string name="log_in_message_fa">لطفا نام کاربری و رمز ورود خود را وارد نمایید</string>
    <string name="user_name_fa">نام کاربری</string>
    <string name="pass_word_fa">رمز عبور</string>
    <string name="enter_fa">ورود</string>
    <string name="forgot_fa">فراموشی رمز عبور</string>
    <string name="signup_fa">ثبت نام</string>
    <string name="update_fa">بروزرسانی نرم افزار</string>
    <string name="callPoshtiban_fa">تماس با پشتیبان نرم افزار</string>
    <string name="version_fa">نسخه نرم افزار</string>
    <string name="logout_fa">خروج از حساب کاربری</string>
    <string name="question_fa">آبا میخواهید خارج شوید؟</string>
    <string name="no_fa">خیر</string>
    <string name="yes_fa">بله</string>
    <string name="message_order">سفارش شما با موفقیت ذخیره و جهت بررسی و صدور پیش فاکتور ارسال گردید</string>
    <string name="factor_number_textview">شماره سفارش شما:</string>
    <string name="return_button">بازگشت</string>
</resources>