<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    >



    <TextView
        android:id="@+id/question"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_fa"

        android:textColor="@android:color/black"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textSize="@dimen/textSizeLarge"
        android:layout_alignParentTop="true"
        />

    <View
        android:id="@+id/line1"
        android:layout_width="@dimen/login_width_button"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="@color/kwc_red"
        android:layout_below="@+id/FA"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_fa"
            android:textColor="@android:color/black"
            android:padding="5dp"
            android:layout_margin="@dimen/marginMedium"
            android:textSize="@dimen/textSizeMedium"
            android:gravity="center"

            />

        <View
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:background="@color/kwc_red"
            />


        <TextView
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes_fa"

            android:textColor="@android:color/black"
            android:padding="5dp"
            android:layout_margin="@dimen/marginMedium"
            android:textSize="@dimen/textSizeMedium"
            android:gravity="center"

            />


    </LinearLayout>



</LinearLayout>