<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeMedium"
                android:textColor="@android:color/black"
                android:text="@string/update_fa"
                android:layout_margin="@dimen/marginMedium"
                android:gravity="center"
                />


            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@color/kwc_gray_item" />
            <TextView
                android:id="@+id/call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeMedium"
                android:textColor="@android:color/black"
                android:text="@string/callPoshtiban_fa"
                android:gravity="center"
                android:layout_margin="@dimen/marginMedium"
                />


            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@color/kwc_gray_item" />
            <TextView
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeMedium"
                android:textColor="@android:color/black"
                android:text="@string/version_fa"
                android:gravity="center"
                android:layout_margin="@dimen/marginMedium"
                />


            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@color/kwc_gray_item" />
            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textSizeMedium"
                android:textColor="@android:color/black"
                android:text="@string/logout_fa"
                android:gravity="center"
                android:layout_margin="@dimen/marginMedium"
                />


            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@color/kwc_gray_item" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>