<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight"
        >


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/toolbarIcon"
            android:text="home"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/home"
            android:id="@+id/toolbarLeftIcon"/>

        <TextView
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="&#xf053;"
            android:layout_alignBaseline="@+id/toolbarLeftIcon"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textSizeLarge"
            android:textColor="@color/kwc_red"
            />

        <TextView
            android:id="@+id/titlenews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/News_EN"
            android:layout_toRightOf="@+id/back"
            android:layout_centerVertical="true"
            android:textSize="@dimen/textSizeLarge"
            />
    </RelativeLayout>


    <View

        android:id="@+id/line2"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:textSize="@dimen/textSizeMedium"
        android:background="@color/kwc_red" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:id="@+id/newdetailImageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_centerHorizontal="true"
        android:minHeight="@dimen/minPicHeight"
        android:layout_marginTop="@dimen/marginSmall"/>
    <TextView
        android:layout_below="@+id/newdetailImageview"
        android:id="@+id/newdetail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsTitle1EN"
        android:textColor="@color/kwc_red"
        android:textSize="@dimen/textSizeLarge"
        android:layout_marginRight="@dimen/marginMedium"
        android:layout_marginLeft="@dimen/marginMedium"
        android:layout_marginTop="@dimen/marginMedium"/>

    <TextView
        android:layout_below="@+id/newdetail_title"
        android:id="@+id/newdetail_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aboutUsText1EN"
        android:textColor="@android:color/black"
        android:textSize="@dimen/textSizeMedium"
        android:layout_marginRight="@dimen/marginMedium"
        android:layout_marginLeft="@dimen/marginMedium"
        android:layout_marginTop="@dimen/marginSmall"/>

</RelativeLayout>
    </ScrollView>
</LinearLayout>